--- a/landfast_sea_ice/daily_eda.ipynb
+++ b/landfast_sea_ice/daily_eda.ipynb
@@ -7,14 +7,12 @@
    "source": [
     "### Exploratory Data Analysis (EDA) for Daily SLIE GeoTIFFs\n",
     "\n",
-    "This notebook executes EDA for the daily SLIE landfast sea ice data for both the Chukchi Sea and the Beaufort Sea ice zones. For each zone and ice year a sample of the data will be plotted and metadata will be tested for consistency. We will examine file counts for each zone the associated date information encoded in the file names as well.\n",
-    "\n",
-    "We will also determine a strategy for reprojecting these data and explore how a fusion between the zones might play out."
+    "This notebook executes EDA for the daily SLIE landfast sea ice data for both the Chukchi Sea and the Beaufort Sea ice zones. For each zone and ice year a sample of the data will be plotted and metadata will be tested for consistency. We will examine file counts for each zone and the associated date information encoded in the file names as well."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1a2081b7-492a-44fb-8a08-48a5035389bf",
    "metadata": {},
    "outputs": [],
@@ -32,13 +30,13 @@
     "from rasterio.merge import merge\n",
     "\n",
     "import eda as eda\n",
-    "from luts import ice_zones, ice_years, pixel_values, daily_slie_colors\n",
+    "from luts import ice_zones, ice_years, pixel_values\n",
     "from config import INPUT_DIR, SCRATCH_DIR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0c43cc51-4cd5-4326-aa04-7b797013d34f",
    "metadata": {},
    "outputs": [
@@ -53,7 +51,7 @@
        " 255: 'Landfast Ice'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "90f93f49-ad31-43b4-b31a-3743d25bc78c",
    "metadata": {},
    "outputs": [],
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "75eae0cd-b62b-4f31-9eef-fcb2444c897b",
    "metadata": {},
    "outputs": [
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cb23cc99-eab5-4732-9dfc-006c7ef02d4e",
    "metadata": {},
    "outputs": [
@@ -756,13 +754,12 @@
    "metadata": {},
    "source": [
     "So far so good - there is constant metadata within each directory, and the data pass the eyeball test, at least for the random sample plotted here.\n",
-    "The next step is to determine how we might reproject these data. The Beaufort and Chukchi ice zones are geographically adjacent and together encompass Alaska's Arctic coastline - but how the data products line up is unknown.\n",
-    "We can test this by running a stock `merge` command on the data and looking at the outputs."
+    "The next step is to determine how we might reproject these data. The Beaufort and Chukchi ice zones are geographically adjacent, but not quite contiguous, and together encompass Alaska's Arctic coastline - but how the data products precisely line up is unknown. We can test this by running a stock `merge` command on the data and looking at the outputs. We'll also examine the metadata of the original products."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "a8a5ede7-e5cc-4068-a819-ed48a38b0cbb",
    "metadata": {},
    "outputs": [
@@ -802,22 +799,22 @@
    "id": "60836004-a360-463f-930b-4b7870b47cc5",
    "metadata": {},
    "source": [
-    "Pointing out a few things in the metadata:\n",
+    "There are a few things to point out in the metadata:\n",
     "\n",
-    "**'nodata': None** is a bit unusual. We'll want to set this to `111` per the PI documentation.\n",
+    "**'nodata': None** is a bit unusual. We'll want to set this to `111` per the PI documentation. This should reduce the file size as well.\n",
     "\n",
     "**AUTHORITY[\"EPSG\",\"4326\"]]** - we'll want to reproject these data to EPSG 3338\n",
     "\n",
     "**Affine(100.0, 0.0, -236180.0, 0.0, -100.0, 2509919.0)** these data have 100 m resolution - this is expected, but a far finer spatial resolution than we usually work with\n",
     "\n",
-    "**'compress': 'packbits'** not a common compression algorithm in my experience, consider alternatives?\n",
+    "**'compress': 'packbits'** not a common compression algorithm in my experience, we'll consider alternatives\n",
     "\n",
     "**'transform': Affine(100.0, 0.0, -859401.4481000006, 0.0, -100.0, 2423189.104800001)** - the Chukchi affine transformation has some floating point noise. We can trim this by reprojecting with a `target aligned pixels` parameter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "f40e972a-d816-4013-9574-91c3f7d1a832",
    "metadata": {},
    "outputs": [
@@ -838,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "ff0cd4bf-6392-4d8e-8607-aa1f464ddab2",
    "metadata": {},
    "outputs": [
@@ -862,12 +859,12 @@
    "id": "81c71e7d-e0e6-429c-a25b-a8728fdc0b17",
    "metadata": {},
    "source": [
-    "The full extent of the merge product looks good - but upon closer inspection, however, there is an unsightly seam where the two data products meet."
+    "The full extent of both merge products seems good - but upon closer inspection there is an unsightly seam where the two data products meet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "6570b691-0730-44b2-8169-f21b31764ef9",
    "metadata": {},
    "outputs": [
@@ -888,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "9e8fa1c2-9916-499d-959a-913921e26b5f",
    "metadata": {},
    "outputs": [
@@ -912,16 +909,16 @@
    "id": "a2956bdd-0a07-49bd-a814-371c58a12d39",
    "metadata": {},
    "source": [
-    "In the large scale view in the first set of plots from the merged product we learn that merging the two geographic regions creates a raster where the vast majority of the pixels are \"NoData\" - unfortunately Alaska's Arctic Coastline does not conform to a shape conducive to efficient use of a 2-D array. And this is expensive when the pixel size is 100 m.\n",
+    "So, there are two initial reasons to avoid merging these products. First, in the large scale view in the first set of plots from the merged products we learn that merging the two geographic regions creates a raster where the vast majority of the pixels are \"NoData\" - unfortunately Alaska's Arctic Coastline does not conform to a shape conducive to efficient use of a 2-D array. And this is expensive when the pixel size is 100 m.\n",
     "\n",
-    "Terrestrial integrity of the merged product improves when the Chukchi data overlays the Beaufort, rather than vice-versa. But there is still a marine \"No Data\" strip - and that's OK. These were discrete datasets from the beginning.\n",
+    "Second, there is a seam of discontinuity between the two zones. While we can tell that the terrestrial integrity of the merged product improves when the Chukchi data overlays the Beaufort, rather than vice-versa, there is still a marine \"No Data\" strip. Ultimately, this is fine. These were discrete datasets from the beginning, and the PIs gave no indication that they should be merged.\n",
     "\n",
-    "However, if a seamless, merged data product were desired we could shift the bounds of one of these datasets in reprojection to eliminate the seam. We could \"bump\" the Chukchi dataset 200 m (these are 100 m pixels, and that seam appears to be about two pixels) to the East and eliminate the seam in the overlay using a `target aligned pixels` aka `tap` GDAL-esque method combined with a prescribed offset when we reproject these data. We will use the `tap` method either way to eliminate the floating point noise in the Chukchi affine transformation. We also know that `111` is the no data value for this dataset, so let's go ahead and prescribe that in the raster creation profile for all cases."
+    "However, if a seamless, merged data product were desired we could shift the bounds of one of these datasets in reprojection to eliminate the seam. We could \"bump\" the Chukchi dataset 200 m (these are 100 m pixels, and that seam appears to be about two pixels) to the East and eliminate the seam in the overlay using a `target aligned pixels` aka `tap` GDAL-esque method combined with a prescribed offset when we reproject these data. We will use the `tap` method either way to eliminate the floating point noise in the Chukchi affine transformation. We also know that `111` is the no data value for this dataset, so let's go ahead and prescribe that in the raster creation profile for all cases. We'll do some experimentation in the following cells."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "1ac7aeb9-3812-45b1-ae41-bb6016cfe9eb",
    "metadata": {},
    "outputs": [
@@ -1007,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "ba58e07c-fda4-4db4-ba99-df9bbd8f9170",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "fb9aa9ff-3d1f-4b9e-b086-69240772cd9d",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1027,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4047074/675201995.py:5: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "/tmp/ipykernel_2818855/675201995.py:5: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  set1_cmap = get_cmap(\"Set1\", num_colors)\n"
      ]
     },
@@ -1085,99 +1082,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b97ba3a-feb0-446e-ba7e-5a762629c0af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "cbbeae1f-0020-43cc-aec8-bb8da04eefb1",
    "metadata": {},
    "source": [
-    "Well, we can see that the results of the default tap really didn't have much of an impact. That makes sense if you compare the metadata, we only bumped things like one meter.\n",
-    "We can also compare results against the default `gdalwarp -tap` output."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "442af8e3-84fb-416e-9cc9-9321089db77e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdal_tap_chuk_sample = SCRATCH_DIR / f\"gdal_reproj_tap_{chuk_sample.parent.parent.name}_{chuk_sample.name}\"\n",
-    "gdal_tap_beauf_sample = SCRATCH_DIR / f\"gdal_reproj_tap_{beauf_sample.parent.parent.name}_{beauf_sample.name}\"\n",
-    "\n",
-    "with rio.open(gdal_tap_beauf_sample) as src:\n",
-    "    print(\"Beaufort Meta\")\n",
-    "    print(src.meta)\n",
-    "\n",
-    "with rio.open(gdal_tap_chuk_sample) as src:\n",
-    "    print(\"Chukchi Meta\")\n",
-    "    print(src.meta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb1d36b6-a018-4fef-bf7e-865a5145e75e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option(\"display.precision\", 12)\n",
-    "def fetch_all_geotiff_metadata(directory, str_to_match=None):\n",
-    "    \"\"\"Fetch metadata of all GeoTIFF files in a directory and return as a pandas DataFrame.\"\"\"\n",
-    "    geotiffs = eda.list_geotiffs(directory, str_to_match)\n",
-    "    metadata_list = []\n",
-    "\n",
-    "    for geotiff in geotiffs:\n",
-    "        with rio.open(geotiff) as src:\n",
-    "            meta = src.profile\n",
-    "            affine = src.transform\n",
-    "            meta_dict = {\n",
-    "                'driver': meta.get('driver'),\n",
-    "                'dtype': meta.get('dtype'),\n",
-    "                'nodata': meta.get('nodata'),\n",
-    "                'width': meta.get('width'),\n",
-    "                'height': meta.get('height'),\n",
-    "                'count': meta.get('count'),\n",
-    "                'crs': meta.get('crs'),\n",
-    "                'transform_a': affine.a,\n",
-    "                'transform_b': affine.b,\n",
-    "                'transform_c': affine.c,\n",
-    "                'transform_d': affine.d,\n",
-    "                'transform_e': affine.e,\n",
-    "                'transform_f': affine.f\n",
-    "            }\n",
-    "            meta_dict['filename'] = geotiff.name\n",
-    "            metadata_list.append(meta_dict)\n",
-    "\n",
-    "    df = pd.DataFrame(metadata_list)\n",
-    "    df.set_index('filename', inplace=True)\n",
-    "    return df\n",
-    "    \n",
-    "fetch_all_geotiff_metadata(SCRATCH_DIR, \"Chuk\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b087592e-58b1-4e0b-b3a7-b6dad890f5ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fetch_all_geotiff_metadata(SCRATCH_DIR, \"Beau\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4188e0a2-ad03-4a32-a771-a93bf2172b01",
-   "metadata": {},
-   "source": [
-    "Alright - there isn't much a difference between these methods. The only thing to note is that the `rasterio` implementation of a `tap` reproject (i.e., warp) call can in **some** cases yield slightly different height and width values when compared to the GDAL version. The important takeaways here are that the `-tap` is worthwhile because it will better align the grids and permit fusing the Chukchi and Beaufort zones if that ends up being a desirable thing to do. The other thing to note here is that while NoData values are described for these data, they aren't actually specified in the geospatial product. We'll want to set a no data value of `111` per the documentation that arrived with this dataset."
+    "Well, we can see that the results of the default tap really didn't have much of an impact. That makes sense if you compare the metadata, we only bumped things like one meter. We will conclude the EDA here, we have enough information to proceed with constructing some preprocessing functions to use to generate our desired dataset."
    ]
   },
   {
