run pre-PR and split chuk and beauf into different cells

--- a/landfast_sea_ice/curate_daily_slie_geotiffs.ipynb
+++ b/landfast_sea_ice/curate_daily_slie_geotiffs.ipynb
@@ -6,14 +6,16 @@
    "metadata": {},
    "source": [
     "## Daily SLIE GeoTIFF Curation\n",
-    "\n",
+    "We'll do the following in this notebook:\n",
     "* Prescribe new file names\n",
-    "* Reprojecting these data to 3338 on an aligned grid, and override the source compression and lack of `nodata` value."
+    "* Reproject to 3338 on an aligned grid\n",
+    "* Override the source compression in favor of something more conventional\n",
+    "* Rectify lack of `nodata` value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "192c609a-bc9a-4ed9-9750-a4a497ef2f50",
    "metadata": {},
    "outputs": [],
@@ -26,23 +28,13 @@
     "\n",
     "import eda as eda\n",
     "import preprocess as preprocess\n",
-    "from luts import ice_zones, ice_years, data_sources\n",
+    "from luts import ice_zones, ice_years\n",
     "from config import INPUT_DIR, DAILY_BEAUFORT_DIR, DAILY_CHUKCHI_DIR, SCRATCH_DIR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c8812197-9393-4a3f-b959-7fd7fb3b6d05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ice_zones"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9f38eac3-2a45-4f76-b32e-ed2d43fbbd8b",
    "metadata": {},
    "outputs": [],
@@ -64,19 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8a09f5a1-417d-425d-8d24-62bb0abb9abf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/beegfs/CMIP6/cparr4/landfast_sea_ice_products/Beaufort_Daily/beaufort_19970414_radarsat_slie.tif\n",
+      "/beegfs/CMIP6/cparr4/landfast_sea_ice_products/Chukchi_Daily/chukchi_20230323_asip_slie.tif\n"
+     ]
+    }
+   ],
    "source": [
-    "# example of the renaming function, mostly just placing the product in the output directory and then also expanding the data source attribute\n",
+    "# show some examples of the renaming function\n",
+    "# primarily placing the product in the output directory and then also expanding the data source attribute\n",
     "print(preprocess.daily_slie_rename(beauf_geotiffs[0]))\n",
     "print(preprocess.daily_slie_rename(chuk_geotiffs[-1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f3d0f743-374a-4b46-8bb7-e7829828a314",
    "metadata": {},
    "outputs": [],
@@ -84,8 +86,8 @@
     "cluster = SLURMCluster(\n",
     "            cores=24,\n",
     "            memory=\"128GB\",\n",
-    "            queue=\"t2small\",\n",
-    "            walltime=\"23:00:00\",\n",
+    "            queue=\"t2small\", \n",
+    "            walltime=\"4:00:00\",\n",
     "            log_directory=SCRATCH_DIR,\n",
     "            local_directory=SCRATCH_DIR,\n",
     "            account=\"cmip6\",\n",
@@ -93,13 +95,13 @@
     "        )\n",
     "client = dd.Client(cluster)\n",
     "\n",
-    "cluster.scale(100)"
+    "cluster.scale(100) # yolo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8523e1aa-f6af-414a-9b6a-b3be61f725b3",
+   "execution_count": 5,
+   "id": "c5437364-0fbe-48bc-a595-ed1006ff2cbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6fbf9bf4-0202-4a33-b29d-002991bfed48",
+   "execution_count": 6,
+   "id": "718cf268-27dc-4481-9271-b8f8008b9122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "78d28d35-8a74-4454-b674-58a9bd9e7a66",
    "metadata": {},
    "outputs": [],
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "69999d7a-c041-456f-bf1e-9828e4356aa3",
    "metadata": {},
    "outputs": [],
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0ff50edd-89df-419a-b0f3-653cf5887a50",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1bb28b40-0b06-45d2-9ccc-8d073e0597cc",
    "metadata": {},
    "outputs": [],
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "895c341f-942b-4e29-988e-ee6d0ed16b54",
    "metadata": {},
    "outputs": [],
@@ -171,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d7e9fdd-6891-4ce9-8753-4aa5b819728f",
+   "id": "cce38475-546e-43b1-a76e-464c1f60becf",
    "metadata": {},
    "outputs": [],
    "source": []
